@@ -1160,7 +1160,13 @@ enum
     SPR_G2_ALPINE_LIFT_TRACK_GENTLE_DIAGONAL = SPR_G2_ALPINE_LIFT_TRACK_FLAT_DIAGONAL + 4,
     SPR_G2_ALPINE_END = SPR_G2_ALPINE_LIFT_TRACK_GENTLE_DIAGONAL + 12,
 
-    SPR_G2_END = SPR_G2_ALPINE_END,
+    SPR_G2_WOODEN_RC_STATION_BLOCK_BRAKE_OPEN_SW_NE = SPR_G2_ALPINE_END,
+    SPR_G2_WOODEN_RC_STATION_BLOCK_BRAKE_OPEN_NW_SE,
+    SPR_G2_WOODEN_RC_STATION_BLOCK_BRAKE_CLOSED_SW_NE,
+    SPR_G2_WOODEN_RC_STATION_BLOCK_BRAKE_CLOSED_NW_SE,
+    SPR_G2_EMPTY,
+
+    SPR_G2_END = SPR_G2_EMPTY + 1,
 
     SPR_CSG_BEGIN = SPR_G2_END,
     SPR_CSG_END = SPR_CSG_BEGIN + RCT1::Limits::Num_LL_CSG_Entries,
